# updator

./: .gitignore  CMakeLists.txt  FinishedPage.qml  HomePage.qml  README.md  UpdatePage.qml  UpdatingPage.qml  main.cpp  main.qml  pisces-updator.desktop  updatorhelper.cpp  updatorhelper.h  upgradeablemodel.cpp  upgradeablemodel.h
debian/: changelog  control  copyright
